--- a/addmie/css/post.css
+++ b/addmie/css/post.css
@@ -19,7 +19,9 @@
     overflow: scroll;
     width: 100%;
 }
-
+#likes span,#shares span,#saves span{
+    border-bottom: 1px solid black;
+}
 #comments {
     flex-direction: column;
     overflow-y: scroll;
@@ -62,11 +64,16 @@
     color: black;    
     background-color: lightcyan;
     border: none;
-    height: 30%;
+    height: 50%;
     width: 100%;
     resize: none;
     outline: none;
     overflow: hidden;
+}
+
+#newpostform textarea{
+    width: 100%;
+    height: 50px;
 }
 #likes.hide:target {display:block;}
 #comments.hide:target {display:block;}
