--- a/views/postcontainer.ejs
+++ b/views/postcontainer.ejs
@@ -7,14 +7,15 @@
         <ul >
             <li><button onclick="viewpost('<%=postobj._id%>')"  >view</button></li>
             <li><button onclick="report('<%=postobj._id%>')"  >report</button></li>
-            <li><button onclick="copypostlink('<%=postobj._id%>')"  >copy link</button></li>
+           <!--  <li><button onclick="copypostlink('<%=postobj._id%>')"  >copy link</button></li> -->
             <li><button onclick="blockthispostuser('<%=postobj._id%>')"  >block</button></li>
             <li><button onclick="messagethispostuser('<%=postobj._id%>','<%=username%>','<%=postobj.username%>','false')"  >message</button></li>
             <li><button onclick="messagethispostuser('<%=postobj._id%>','<%=username%>','<%=postobj.username%>','True')"  >secret</button></li>
         </ul>
     </div>
     <div class="post-image">
-        <img src="../addmie/img/Addmie.png" alt="image" height="400px" width="auto" style="margin: 5px;">
+        <%var imagesource='../'+postobj.blob.path%>
+        <img src="<%=imagesource%>" alt="image" height="400px" width="400px" style="margin: 5px;object-fit: cover;" ondblclick="like('<%=postobj._id%>')">
     </div>
    
     <span>
