--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -83,9 +83,8 @@
             <div class="menu"  >
                 <ul>                    
                     <li><button onclick="reportuser('<%=userobj.username%>')"  >report</button></li>
-                    <li><button onclick="copyuserlink('<%=userobj.username%>')"  >copy link</button></li>
+                    <!-- <li><button onclick="copyuserlink('<%=userobj.username%>')"  >copy link</button></li> -->
                     <li><button onclick="blockthisuser('<%=userobj.username%>')"  >block</button></li>
-                    
                 </ul>
             </div>
         </div>   
