--- a/views/blockedaccount.ejs
+++ b/views/blockedaccount.ejs
@@ -3,9 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "icon" type = "image/png" href = "../addmie/img/Addmie.png"> 
+    <link rel="Stylesheet" href="../addmie/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../addmie/css/gaurav.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="../addmie/js/client.js"></script>
     <title>Document</title>
 </head>
 <body>
-    blocked
+    <%- include('header.ejs',({username:username}))%>
+    <div class="flex grid-container">
+        <div class="flex grid-container-left ">
+            <div class="flex profile">
+                <div class="flex name"> 
+                    <div><%=userobj.fname%></div>
+                    <div><%=userobj.lname%></div>
+                </div>
+                <div id="profile_picture"><img src="../addmie/img/Addmie.png" alt="image" height="155px" width="155px" style="margin: 5px;"></div>
+                <div id="username"><a href=><%=userobj.username%></a></div>
+                
+            </div>
+            
+            <div class="flex flex_column flex_center" id="containerbar">
+                
+                <div class="flex container">
+                    <h1>fans</h1>  
+                           
+                </div>
+                <div class="flex container">
+                    <h2><%=userobj.fans%></h2>
+                    
+                </div>
+                <p id="bio">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt aliquid voluptatibus fugiat non itaque reprehenderit, voluptas vero quam tempore ad consectetur repellat illo hic architecto, voluptatum, dicta vel iure quia. Cumque, impedit, amet laudantium earum at modi quos error quibusdam sunt aut alias velit exercitationem dolorum fugiat odit dolorem accusamus perspiciatis. Enim eos consequatur adipisci dolorem optio placeat quas facilis reprehenderit sequi architecto ipsam, culpa cum, odit aliquid corrupti voluptates obcaecati eius necessitatibus iste doloremque? Laboriosam aliquid minus at alias numquam, temporibus eius eveniet vitae omnis repellat error cumque assumenda corrupti impedit adipisci. Eos at quae, saepe repudiandae atque non?
+                </p>
+               
+            </div>
+            <div class="headerbuttons flex flex_center" style="width: 10%;">
+                
+                <button onclick="hide('profilemenu')" class='doted' style="background-color: transparent;outline: none;border: none;">
+                    <svg width="4em" height="4em" viewBox="0 0 16 16" class="bi bi-three-dots-vertical" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+                        </svg>
+                </button>
+                
+            </div>
+            
+        </div>
+        <div  id="profilemenu" class="flex flex_center hide">
+            <div class="menu"  >
+                <ul>                    
+                    <li><button onclick="reportuser('<%=userobj.username%>')"  >report</button></li>
+                    <li><button onclick="copyuserlink('<%=userobj.username%>')"  >copy link</button></li>
+                    <li><button onclick="unblockthisuser('<%=userobj.username%>')"  >unblock</button></li>
+                </ul>
+            </div>
+        </div>   
+    </div>
 </body>
 </html>
