--- a/views/mypostcontainer.ejs
+++ b/views/mypostcontainer.ejs
@@ -1,5 +1,6 @@
 <div class='my-posts-container' id='<%=postobj._id%>'>
     <%var menuid='menu'+postobj._id%>
+    
     <div class="my-posts-container-header">
          <%-include('postheader.ejs',{friend:postobj.username,postid:postobj._id});%> 
     </div>
@@ -7,13 +8,13 @@
         <ul >
             <li><button onclick="viewpost('<%=postobj._id%>')"  >view</button></li>
             <li><button onclick="removepost('<%=postobj._id%>')"  >remove</button></li>
-            <li><button onclick="copypostlink('<%=postobj._id%>')"  >copy link</button></li>
-            <li><button onclick="editthispost('<%=postobj._id%>')"  >edit</button></li>
+            <!-- <li><button onclick="copypostlink('<%=postobj._id%>')"  >copy link</button></li>
+            <li><button onclick="editthispost('<%=postobj._id%>')"  >edit</button></li> -->
         </ul>
     </div>
-    <div class="post-image">
- 
-            <img src="../addmie/img/Addmie.png" alt="image" height="400px" width="auto" style="margin: 5px;" ondblclick="like('<%=postobj._id%>')">
+    <div class="post-image" >
+        <%var imagesource='../'+postobj.blob.path%>
+            <img src="<%=imagesource%>" alt="image" height="400px" width="400px" style="margin: 5px;object-fit: cover;" ondblclick="like('<%=postobj._id%>')">
 
     </div>
    
