--- a/views/post.ejs
+++ b/views/post.ejs
@@ -31,7 +31,8 @@
                             </span>                         
                     </div>
                     <div class="post-image">
-                        <img src="../addmie/img/Addmie.png" alt="image" height="400px" width="auto" style="margin: 5px;">
+                        <%var imagesource='../'+postobj.blob.path%>
+                        <img src="<%=imagesource%>" alt="image" height="400px" width="400px" style="margin: 5px;object-fit: cover;" ondblclick="like('<%=postobj._id%>')">
                     </div>
                    
                     <span>                        
