--- a/views/mypostcontainer.ejs
+++ b/views/mypostcontainer.ejs
@@ -14,7 +14,7 @@
     </div>
     <div class="post-image" >
         <%var imagesource='../'+postobj.blob.path%>
-            <img src="<%=imagesource%>" alt="image" height="400px" width="400px" style="margin: 5px;object-fit: cover;" ondblclick="like('<%=postobj._id%>')">
+            <img src="<%=imagesource%>" alt="image" style="object-fit: cover;" ondblclick="like('<%=postobj._id%>')">
 
     </div>
    
