--- a/addmie/css/styles.css
+++ b/addmie/css/styles.css
@@ -3,7 +3,7 @@
     padding: 0; 
     margin: 0;
     text-decoration: none;
-    font-size: 12px;
+
     
 }
 
@@ -72,6 +72,7 @@ nav{
     display: flex;
 }
 .flex_center{
+    text-align: center;
     align-items: center;
     justify-content: center;
 }
@@ -81,20 +82,16 @@ nav{
 .flex_row{
     flex-direction: row;
 }
+.blurtext{
+    color: rgba(128, 128, 128, 0.45);
+}
 .title{
     font-size: 32px;
     font-weight: 600;
     padding-left: 10px;
     padding-right: 10px;
 }
-#search_form button,#search_form textarea{
-    border: none;
-    outline: none;
-    padding: 5px;
-}
-#search_form{
-    border: 1px solid black;
-}
+
 .headerbuttons{
     padding-left: 5px;
     padding-right: 5px;
@@ -133,6 +130,7 @@ nav{
     color: rgba(65,65,65,0.75);
 }
 #bio{
+    word-wrap: break-word;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .container{
@@ -256,8 +254,19 @@ nav{
     padding: 3px;
 }
 .post-image{
- 
-    overflow: hidden;
+    box-sizing: border-box;
+    position: relative;
+}
+.post-image img{
+    position: absolute;
+    height: 400px;
+    width: 400px;
+    margin: 5px;
+
+}
+.post-image .onbottomimage{
+    filter: blur(7px);
+    clip: rect(0,400px,400px,0);
 }
 .friends-container a{
     color: black;
@@ -441,10 +450,50 @@ nav{
     margin: 0px;
 }
 
+.search_container{
+    border: 1px solid black;
+    height: 100%;
+    width: 100%;
+    margin: 100px;
+    border-radius: 30px;
+    padding: 30px;
+    font-size: 24px;
+    
+}
 
+.search_container form  div{
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+}
+
+ .search_container input[type=text]{
+    border-radius: 10px ;
+    border: 1px solid black;
+    height: 100%;
+    outline: none;
+ }
+ .search_container input{
+     margin: 5px;
+     padding: 5px;
+ }
+ .search_container button{
+     outline: none;
+     border: none;
+     background-color: transparent;
+ }
 
 .hide{
     display: none;
+}
+.accountbox{
+    
+    width: 100%;
+    border-top: 1px solid black;
+    overflow: scroll;
+    
 }
 #myposts.hide:target {display:block;}
 #newpost.hide:target {display:block;}
