--- a/views/postcontainer.ejs
+++ b/views/postcontainer.ejs
@@ -15,7 +15,11 @@
     </div>
     <div class="post-image">
         <%var imagesource='../'+postobj.blob.path%>
-        <img src="<%=imagesource%>" alt="image" height="400px" width="400px" style="margin: 5px;object-fit: cover;" ondblclick="like('<%=postobj._id%>')">
+        
+        <img class='onbottomimage' src="<%=imagesource%>" alt="image" style="object-fit: cover;" ondblclick="like('<%=postobj._id%>')">
+        <img class='ontopimage' src="<%=imagesource%>" alt="image" style="object-fit: contain;" ondblclick="like('<%=postobj._id%>')">
+        
+        
     </div>
    
     <span>
