--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -31,13 +31,13 @@
             }%>
     </section>
     
-    <div class="convomenu hide"   id='<%=menuid%>'>
+   <!--  <div class="convomenu hide flex flex_center"   id='<%=menuid%>'>
         <ul >
             <li><button onclick="deleteconversation('<%=result._id%>')"  >delete</button></li>
             <li><button onclick="blockuser('<%=result._id%>')"  >block</button></li>
             <li><button onclick="muteuser('<%=result._id%>')"  >mute</button></li>
         </ul>
-    </div>
+    </div> -->
 
 
     <div class="masssage-container">
