--- a/views/mypostcontainer.ejs
+++ b/views/mypostcontainer.ejs
@@ -12,10 +12,14 @@
             <li><button onclick="editthispost('<%=postobj._id%>')"  >edit</button></li> -->
         </ul>
     </div>
-    <div class="post-image" >
+    <div class="post-image flex" >
         <%var imagesource='../'+postobj.blob.path%>
-            <img src="<%=imagesource%>" alt="image" style="object-fit: cover;" ondblclick="like('<%=postobj._id%>')">
-
+        <div>
+            <img class='onbottomimage' src="<%=imagesource%>" alt="image" style="object-fit: cover;" ondblclick="like('<%=postobj._id%>')">
+        </div>
+        <div>
+            <img class='ontopimage' src="<%=imagesource%>" alt="image" style="object-fit: contain;" ondblclick="like('<%=postobj._id%>')">
+        </div>      
     </div>
    
     <span>
