--- a/views/post.ejs
+++ b/views/post.ejs
@@ -30,9 +30,14 @@
                                 </div>                                                         
                             </span>                         
                     </div>
-                    <div class="post-image">
+                    <div class="post-image flex">
                         <%var imagesource='../'+postobj.blob.path%>
-                        <img src="<%=imagesource%>" alt="image" height="400px" width="400px" style="margin: 5px;object-fit: cover;" ondblclick="like('<%=postobj._id%>')">
+                        <div>
+                            <img class='onbottomimage' src="<%=imagesource%>" alt="image" style="object-fit: cover;" ondblclick="like('<%=postobj._id%>')">
+                        </div>
+                        <div>
+                            <img class='ontopimage' src="<%=imagesource%>" alt="image" style="object-fit: contain;" ondblclick="like('<%=postobj._id%>')">
+                        </div>      
                     </div>
                    
                     <span>                        
