--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -9,17 +9,14 @@
                 <a href= ''>
                     <%=comment.postedby%>
                 </a>
-                <button>reply</button>
+               <!--  <button>reply</button> -->
             </h3>                                                                                 
         </div>
         
             <p class="">
                 <%=comment.comment%>
-            </p>
-        
-        
-        
-        <div class="flex flex_column flex_center">
+            </p>        
+        <!-- <div class="flex flex_column flex_center">
             <button type="button" class="like btn" onclick="likecomment('')" >       
                 <i class="fas fa-heart" ></i>                
             </button>
@@ -27,5 +24,5 @@
                 
                 <div ><%=postobj.likes.length%></div>
             </span>
-        </div>
+        </div> -->
     </span>
