--- a/views/Addmie.ejs
+++ b/views/Addmie.ejs
@@ -5,6 +5,7 @@
 <link rel = "icon" type = "image/png" href = "Addmie.png"> </link>
 <link rel="stylesheet" type="text/css" href="addmie/css/styles.css">
 <link rel="stylesheet" type="text/css" href="addmie/css/gaurav.css">
+<link rel="stylesheet" type="text/css" href="addmie/css/mobile.css">
 </head>
 <body >
 	
