--- a/views/blockedusers.ejs
+++ b/views/blockedusers.ejs
@@ -7,6 +7,7 @@
     <link rel="Stylesheet" href="../addmie/css/styles.css">
     <link rel="Stylesheet"  href="../addmie/css/gaurav.css">  
     <link rel="Stylesheeet" href="../addmie/css/slider.css">
+    <link rel="stylesheet" type="text/css" href="addmie/css/mobile.css">
     <title>Blocked users</title>
 </head>
 <body>
