--- a/views/direct.ejs
+++ b/views/direct.ejs
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="addmie/css/message.css">
+    <link rel="stylesheet" type="text/css" href="addmie/css/mobile.css">
     <title>DM</title>
 </head>
 <body>
