--- a/views/search.ejs
+++ b/views/search.ejs
@@ -6,8 +6,8 @@
     <link rel = "icon" type = "image/png" href = "../addmie/img/Addmie.png"> 
     <link rel="Stylesheet" href="../addmie/css/styles.css">
     <link rel="stylesheet" type="text/css" href="../addmie/css/gaurav.css">  
- 
-    <title>Settings</title>
+    <link rel="stylesheet" type="text/css" href="addmie/css/mobile.css">
+    <title>Search</title>
 </head>
 <body>
     <%-include('header.ejs',{username:username})%>
