--- a/addmie/css/post.css
+++ b/addmie/css/post.css
@@ -2,7 +2,7 @@
     height: 80%;
     width: fit-content;
     border: 1px solid black;
-
+    align-items: center;
 }
 .postbox_left .postbox_right{
     width: 50%;
@@ -13,6 +13,7 @@
     border-left: 1px solid black;
     margin-left: 5px;
     padding-left: 5px;
+    
 }
 #likes ,#comments{
     height: 100%;
@@ -25,6 +26,7 @@
 #comments {
     flex-direction: column;
     overflow-y: scroll;
+    height: 100%;
 }
 #comments > div.flex.flex_center{
     width: 100%;
