--- a/views/blockedaccount.ejs
+++ b/views/blockedaccount.ejs
@@ -6,6 +6,7 @@
     <link rel = "icon" type = "image/png" href = "../addmie/img/Addmie.png"> 
     <link rel="Stylesheet" href="../addmie/css/styles.css">
     <link rel="stylesheet" type="text/css" href="../addmie/css/gaurav.css">
+    <link rel="stylesheet" type="text/css" href="addmie/css/mobile.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="../addmie/js/client.js"></script>
     <title>Document</title>
