--- a/views/existingconvo.ejs
+++ b/views/existingconvo.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/addmie/css/message.css">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="addmie/css/mobile.css">
+    <title>DM</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script lang="javascript" src="/addmie/js/sendmessage.js"></script>
     
