--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,9 +6,11 @@
     <link rel = "icon" type = "image/png" href = "../addmie/img/Addmie.png"> 
     <link rel="Stylesheet" href="../addmie/css/styles.css">
     <link rel="stylesheet" type="text/css" href="../addmie/css/gaurav.css">
+    <link rel="stylesheet" type="text/css" href="addmie/css/mobile.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="../addmie/js/client.js"></script>
-    <title>Document</title>
+    
+    <title><%=userobj.username%></title>
 </head>
 <body>
     <%- include('header.ejs',({username:username}))%>
@@ -22,7 +24,7 @@
                 </div>
                 <div id="profile_picture">
                     <%var imagesource='../'+userobj.dp.path%>
-                    <img src="<%=imagesource%>" alt="image" height="155px" width="155px" style="margin: 5px;">
+                    <img src="<%=imagesource%>" alt="image" >
                 </div>
                 <div id="username"><a href=><%=userobj.username%></a></div>
                 
