--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -6,7 +6,7 @@
     <link rel = "icon" type = "image/png" href = "../addmie/img/Addmie.png"> 
     <link rel="Stylesheet" href="../addmie/css/styles.css">
     <link rel="stylesheet" type="text/css" href="../addmie/css/gaurav.css">  
- 
+    <link rel="stylesheet" type="text/css" href="addmie/css/mobile.css">
     <title>Settings</title>
 </head>
 <body>
