last commit change password added

--- a/views/convoheader.ejs
+++ b/views/convoheader.ejs
@@ -4,7 +4,9 @@
 
     
     <a href=<%=profilelink%> >
-        <div class="profilepic"></div>
+        <%var dp = '../addmie/dp/'+friend+'.jpg'%>
+
+        <img src="<%=dp%>" alt="image" height="30px" width="30px" style="margin: 5px;">
     </a>
     <a href=<%=convolink%> class="profilename">
         <div ><%=friend%></div>
