--- a/views/accountheader.ejs
+++ b/views/accountheader.ejs
@@ -3,8 +3,8 @@
 
 <span class="flex flex_center">
     <div class="post_profile_picture">
-        <img src="../addmie/img/Addmie.png" alt="image" height="30px" width="30px" style="margin: 5px;">
-
+        <%var dp = '../addmie/dp/'+friend+'.jpg'%>
+        <img src="<%=dp%>" alt="image" height="30px" width="30px" style="margin: 5px;">
     </div>
     <div style="width: 100px;">        
         <a style="font-size: 16px;" href= <%=link%> >
