trial bug fixes

--- a/addmie/css/mobile.css
+++ b/addmie/css/mobile.css
@@ -56,4 +56,8 @@
     #comments >div.flex {
         width: 80%;
     }
+    .profileoptions button,.profileoptions a{
+        font-size: 10px;
+        width: fit-content;
+    }
 }
