--- a/views/mypostcontainer.ejs
+++ b/views/mypostcontainer.ejs
@@ -29,5 +29,6 @@
     <div class="caption"> 
         <%=postobj.caption%> 
     </div>
+    <div class="blurtext"><%=postobj.creationdate%></div>
     
 </div>
