--- a/views/postcontainer.ejs
+++ b/views/postcontainer.ejs
@@ -30,5 +30,6 @@
     <div class="caption"> 
         <%=postobj.caption%> 
     </div>
+    <div class="blurtext"><%=postobj.creationdate%></div>
     
 </div>
